--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body{
     border-bottom: solid black 1px;
     gap: 10px;
     align-items: center;
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 1;
 }
 
 .navbar__s1__title{
@@ -35,6 +39,7 @@ body{
     font-size: 16px;
     width: 100%;
     align-items: center;
+    background-color: transparent;
 }
 
 .navbar__s2 input:focus{
@@ -44,6 +49,28 @@ body{
 .navbar__s3{
     display: flex;
     gap: 10px;
+}
+
+/* My learning popup*/
+
+.mylearning{
+    position: relative;
+    cursor: pointer;
+}
+
+.mylearning__popup{
+    position: absolute;
+    background-color: white;
+    border: solid black 1px;
+    width: 100px;
+    top: 150%;
+    padding: 20px;
+    right: 0;
+    display: none;
+}
+
+.mylearning:hover .mylearning__popup{
+    display: block;
 }
 
 .categories{
@@ -60,8 +87,28 @@ body{
     border-radius: 30px;
 }
 
+.Ad-section{
+    position: relative;
+}
+
 .Ad-section img{
     width: 100%;
+}
+
+.Ad-section__offer{
+    width: 25%;
+    border: solid black 1px;
+    background-color: white;
+    padding: 2%;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+#countdown{
+    color: red;
+    font-weight: bold;
+    font-size: 18px;
 }
 
 .recommended{
