--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ body{
     gap: 10px;
 }
 
+.navbar__s4{
+    display: none;
+}
+
 /* My learning popup*/
 
 .mylearning{
@@ -151,7 +155,9 @@ body{
 
 
 .course-card{
-    width: 300px;
+    flex: grow 1;
+    flex-basis: 20%;
+    margin: 5px;
 }
 
 .course-card img{
@@ -267,4 +273,27 @@ body{
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   outline: none;
+}
+
+/* Media Queries*/
+
+@media screen and (max-width:800px) {
+    body{
+        font-size: 10px;
+    }
+    .navbar__s4{
+        displa
+    }
+}
+
+@media screen and (max-width:600px) {
+    .course-card{
+        flex-basis: 40%;
+    }
+    .navbar__s2, .navbar__s3{
+        display: none;
+    }
+    .navbar__s4{
+        display: block;
+    }
 }
